# MATHAI

./: .gitignore  ARCHITECTURE_PIVOT_A.md
dajv/: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOVELTY_REPORT_2026-05-25.md  PRE_REGISTRATION_v1.md  PRE_REGISTRATION_v2.md  README.md  pyproject.toml  requirements.txt
dajv/artifacts/: ablation_A3_calibration_size.json  ablation_A4_cross_benchmark.json  ablation_loo.json  ablations_summary.json  aggregation_6extractor_full.json  aggregation_6extractor_partial.json  aggregation_7extractor_final.json  aggregation_8extractor.json  aggregation_k10.json  aggregation_results.json  bootstrap_ci_A_math500_full.json  bootstrap_ci_B_aime.json  bootstrap_ci_B_cleanmath.json  bootstrap_ci_B_full.json  bootstrap_ci_B_math175.json  bsia_sensitivity.json  copula_ablation.json  dependency_matrix_A_math500_full.json  dependency_matrix_B_aime.json  dependency_matrix_B_cleanmath.json  dependency_matrix_B_full.json  dependency_matrix_B_math175.json  dependency_summary.json  full_baseline_compare.json  h6_significance.json  headline_metrics.json  hybrid_aggregation.json  hybrid_modality.json  k10_followup_summary.json  modality_conjunctive.json  prm_head_to_head.json  prm_matched_coverage.json  processbench_dajv_eval.json  quickstart_demo.json  seed_stability.json  seed_stability_per_bench.json  solver_rotation_dajv.json  theorem1_validation.json  threshold_sensitivity.json  verge_proxy_compare.json  (+11 more)
dajv/paper/: main.tex  references.bib
dajv/scripts/: example_quickstart.py  run_8extractor_aggregation.py  run_ablations.py  run_aggregation_comparison.py  run_bsia_sensitivity.py  run_copula_ablation.py  run_cross_modality_heatmap.py  run_dependency_mapping.py  run_figures.py  run_final_k7_analysis.py  run_full_baseline_compare.py  run_h6_figure.py  run_h6_significance.py  run_headline_metrics.py  run_hybrid_aggregation.py  run_hybrid_modality.py  run_hybrid_modality_figure.py  run_k10_followup.py  run_loo_ablation.py  run_modality_conjunctive_dajv.py  run_new_extractors.py  run_xmod_dajv.py  (+13 more)
(+256 files in other folders)
